[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.93"
chrono = "0.4.38"
regex = "1.11.1"
multimap = "0.10.0"
pathfinding = "4.11.0"
itertools = "0.13.0"
prime_factorization = "1.0.5"
